<resources>
    <string name="app_name" translatable="false">DCLM App</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Deeper Life Bible Church</string>
    <string name="nav_header_subtitle">ict@deeperlifeonline.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="blog">Blog</string>
    <string name="onDemand">OnDemand</string>
    <string name="connect">Connect</string>
    <string name="select_english_language">ENGLISH</string>
    <string name="select_french_language">FRENCH</string>
    <string name="select_portugal_language">PORTUGUESE/EGUN</string>
    <string name="select_yoruba_language">YORUBA</string>
    <string name="select_igbo_language">IGBO</string>
    <string name="select_hausa_language">HAUSA</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="app_describe">Your Spiritual Welfare is our Concern</string>
    <string name="radio_link">https://airtime.dclm.org/radio/8000/live</string>
    <string name="dclm_api">https://stat1.dclm.org/api/nowplaying/1</string>
    <string name="listning">Listeners: </string>
    <string name="message">Your Spiritual Welfare is our Concern</string>
    <string name="ministering">DCLM Radio</string>
    <string name="video_url"> rtmp://dclmict.org/live/app </string>
    <string name="listen">Listen</string>
    <string name="Watch">Watch</string>
    <string name="jotter">Sermon Note</string>
    <string name="experience">Experience Jesus</string>
    <string name="testimony">Share Testimony</string>
    <string name="prayer_request">Send Prayer Request</string>
    <string name="contact_us">Contact Us</string>
</resources>