<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#242b33"
        tools:context=".ui.LanguageSelection">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:text="@string/select_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/select_english_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />


            <Button
                android:id="@+id/french"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/select_french_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/portugal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/select_portugal_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />


            <Button
                android:id="@+id/yoruba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/select_yoruba_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/igbo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/select_igbo_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/hausa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/select_hausa_language"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />


            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/select_language"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>
</layout>