<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="viewmodel"
            type="org.dclm.live.ui.experience.ExperienceViewModel" />
    </data>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:backgroundTint="#000"
    android:background="#000"
    tools:targetApi="lollipop"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/testimony"
            android:id="@+id/testimony"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_margin="4dp"
            android:background="#fff"
            android:backgroundTint="#fff"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prayer_request"
            android:id="@+id/prayer_request"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_margin="4dp"
            android:background="#fff"
            android:backgroundTint="#fff"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/contact_us"
            android:id="@+id/contact_us"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_margin="4dp"
            android:background="#fff"
            android:backgroundTint="#fff"/>
    </LinearLayout>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:id="@+id/progress_bar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"
        android:background="#000"
        tools:listitem="@layout/testimony_item" />
</LinearLayout>
</layout>